add tasks and hard sql requests
